<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="ButtonSC">Start Chat</string>
    <string name="ButtonWeather">Weather Forecast</string>
    <string name="ButtonS">Send</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="EnableSomething">Enable Something</string>
    <string name="title_activity_login">Title login</string>
    <string name="LoginButtonText">Login</string>
</resources>
