<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.deeyu.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView" />

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/ButtonSC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="49dp"
        android:id="@+id/buttonSC" />

    <Button
        android:text="@string/ButtonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_marginTop="45dp"
        android:id="@+id/buttonWeather" />


</RelativeLayout>
