<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="2"
    android:columnCount="2"
    tools:context="com.example.deeyu.androidlabs.ListItemsActivity">

    <RadioButton
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/RadioButton" />

    <Switch android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/mySwitch"
        android:text="@string/EnableSomething" />

    <CheckBox
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/CheckBox"
        android:id="@+id/checkBox" />

    <ImageButton android:layout_column="1"
        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/btn_star_big_on"
        android:id="@+id/image"
        android:clickable="true"
        android:onClick="onClick"/>



</GridLayout>
